--- a/front/react/src/styles/Statistics.css
+++ b/front/react/src/styles/Statistics.css
@@ -3,7 +3,7 @@
     justify-content: center; /* 가운데 정렬 */
     font-family: Arial, sans-serif;
     font-size: 20px;
-    color: rgb(117, 126, 173);
+    color: rgb(98, 104, 136);
     font-weight: bold; /* 굵게 */
     margin: 10px 10px 10px 10px;
 }
@@ -21,7 +21,7 @@
     justify-content: center; /* 수평 중앙 정렬 */
     align-items: center; /* 수직 중앙 정렬 */
     border: 1px solid; 
-    gap: 20px; /* 요소 간 간격 */
+    gap: 50px; /* 요소 간 간격 */
 }
 
 .statistics-float-box {
@@ -40,7 +40,7 @@
     padding: 5px;
     font-family: Arial, sans-serif;
     font-size: 18px;
-    color: rgb(117, 126, 173);
+    color: rgb(98, 104, 136);
     font-weight: bold; /* 굵게 */
 }
 
@@ -48,7 +48,7 @@
     margin: 0 5px; /* 좌우 여백 */
     font-family: Arial, sans-serif;
     font-size: 15px;
-    color: rgb(74, 82, 124);
+    color: rgb(98, 104, 136);
     padding-left: 10px;
     padding-right: 10px;
     border: 1px solid #ccc; /* 테두리 */
@@ -57,3 +57,6 @@
 }
 
 
+.statistics-child-initial {
+
+}
