--- a/front/react/src/styles/Header.css
+++ b/front/react/src/styles/Header.css
@@ -1,159 +1,116 @@
 /* ====================header 공통==================== */
-
-a { color: Gray; text-decoration: none; }
-/* font-weight:bold; */
-a:hover { color:DeepSkyBlue; font-size:1.2em; cursor:pointer; }
-a:active { color:Blue; }
-
- /* Span MenuLink */
- .textlink { color: DarkSlateBlue;; font-weight:bold; }
- .textlink:hover { 
-     color:DeepSkyBlue; 
-     font-size:1.2em; 
-     font-weight:bold;
-     cursor:pointer;
- }
-
-#header {
-    /* height: 120px; */
-    margin-bottom: 50px;
-}
-
-.headerTop {
-    background-color: Lavender ;
-    height: 100px;
-    padding: 0 10px 0 10px;
-    display: grid;
-    grid-template: 20fr 1fr 1fr /1fr;
-    justify-content: flex-start;
-    position: relative;
-}
-
-.headerLeft {
-    position: absolute;
-    top: 75px;
-    left: 5px;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.header_cover {
-    background-color: white;
-    border-bottom: 1px solid lightgray;
-    box-shadow: 1px 1px 2px lightgray;
-    /* height: 60px; */
-    padding: 0 10px 0 10px;
-    position: sticky;
-    top: -1px;
+.header-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    
+    height: 40px;
+    background-color: #ffffff;
+    border-bottom: 1px solid #e0e0e0;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    align-items: center; /* 세로 중앙 정렬 */
+    
+    gap:20px;
+    padding-right: 20px;
+    position: relative; /* 또는 absolute, fixed */
     z-index: 9999;
 }
 
-/* ----------- 상단 헤더 ----------- */
-.mainLogo {
-    width: 150px;
-    text-indent: -9999em;
-    margin-left: 15px;
+.header-menu-item {
+    font-family: 'gothic', 'Arial', sans-serif;
+    color: rgb(22, 99, 51);
+    font-size: 13px;
+    font-weight: 600;
 }
-
-/* 로그인탭 */
-.serviceTab {
-    line-height: 80px;
-    padding-right: 20px;
-    position: absolute;
-    top: 30px;
-    right: 0;
+.header-menu-item:hover {
+    color: rgb(106, 184, 119);
+    cursor: pointer;
 }
+/* ==================== icon menu ==================== */
 
-.serviceTabList {
-    white-space: nowrap;
-}
+.header-search-container {
+    height: 60px;
 
-.serviceTabList li {
-    display: inline-block;
-    font-size: 12px;
-    font-weight: bold;
-}
-
-.serviceTabList li a {
-    color: grey;
-}
-
-.serviceTabList li+li::before {
-    content: ' | ';
-    color: grey;
-}
-
-/* ----------- 하단 헤더 ----------- */
-.headerMenu {
-    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    position: relative;
 }
-
-/* 좌측 카테고리 */
-.mainCategoryList {
-    display: flex;
-}
-
-.mainCategoryList>li {
-    padding: 20px;
-}
-
-.mainCategoryList>li>a {
-    color: black;
-    font-weight: bold;
-}
-
-
-.hidden {
-    visibility: hidden;
-}
-
-/* 우측 검색창 */
-.mainSearch {
-    box-sizing: border-box;
-    width: 250px;
+.header-search-container .header-search-box {
+    width: 400px;
     height: 40px;
-    background-color: white;
-    padding: 0 10px 0 10px;
+    background-color: rgb(255, 255, 255); /* 회색 배경 */
+
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+
+    border: 1px solid #e0e0e0; /* 테두리 */
+    border-radius: 25px; /* 모서리 둥글게 */
+
+    gap: 5px;
 }
 
-.mainSearch input {
-    box-sizing: border-box;
-    width: 90%;
-    border: none;
-    outline: none;
+.header-search-container .header-search-box .header-search-item {
+    justify-content: center;
+    align-items: center;
+    border:none;
+    outline:none;
 }
 
-.mainSearch button {
-    width: 10%;
-    border: none;
-    background: none;
-
+.header-search-container .header-search-box .header-search-button {
+    justify-content: center;
+    align-items: center;
+    border:none;
+    outline:none;
     cursor: pointer;
 }
 
-.mainSearch img {
-    height: 20px;
-}
 
-.mainSearch {
-    height: 100%;
-    display: flex;
-    background-color: #f7f7f7;
-    border-radius: 5px;
-}
+/* ==================== icon menu ==================== */
 
-.mainSearch form {
+.header-category-container {
+    height: 60px;
+    background-color: rgb(255, 255, 255); /* 회색 배경 */
     display: flex;
+    justify-content: center;
     align-items: center;
-    height: 30px;
+    gap: 15px;
+
+    z-index: 19999;
+
 }
 
-.mainSearch form input {
-    background: none;
-    height: 17px;
-    width: 210px;
+.header-category-container .header-category-box {
+    width: 60px;
+    height: 60px;
+
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+
+    background-color: rgb(235, 233, 233); /* 회색 배경 */
+
+    border-radius: 15px; /* 모서리 둥글게 */
+}
+.header-category-container .header-category-box:hover {
+    background-color: rgb(202, 209, 247); /* 회색 배경 */
+    cursor: pointer;
+}
+
+.header-category-container  .header-category-box .header-category-item {
+    width: 60px;
+    height: 60px;
+
+    color: rgb(108, 109, 43);
+    justify-content: center;
+    align-items: center;
+
+    border: none; /* 기본 테두리 제거 */
+    outline: none; /* 클릭 시 포커스 테두리 제거 */
+
+}
+.header-category-container .header-category-box .header-category-item:focus {
+    outline: none;
 }
