--- a/front/react/src/styles/Statistics.css
+++ b/front/react/src/styles/Statistics.css
@@ -35,7 +35,7 @@
     
     float: left; /* 왼쪽 정렬 */
     width: 45%;
-    height: 700px; /* 높이 설정 */   
+    height: 650px; /* 높이 설정 */   
     
 }
 
@@ -79,4 +79,12 @@
     border-radius: 10px;
     font-size: 15px; /* 폰트 크기 설정 */
 }
+
+.statistics-tab {
+    display: flex;
+    cursor: pointer;
+
+    color: rgb(22, 99, 51);
+}
+
 
