--- a/front/react/src/styles/Statistics.css
+++ b/front/react/src/styles/Statistics.css
@@ -27,15 +27,16 @@
     display: flex;
     justify-content: center; /* 수평 중앙 정렬 */
     align-items: center; /* 수직 중앙 정렬 */
-    
+    height: '300px';
     gap: 40px; /* 요소 간 간격 */
+    
 }
 
 .statistics-float-box {
     
     float: left; /* 왼쪽 정렬 */
     width: 45%;
-    height: 650px; /* 높이 설정 */   
+    height: 550px; /* 높이 설정 */   
     
 }
 
@@ -81,13 +82,12 @@
 }
 
 .statistics-table-border {
-
-    margin-top: 10px;
+    
     width: 100%;
     border-collapse: collapse; /* 테두리 겹침 제거 */
 
     border-radius: 10px;
-    font-size: 17px; /* 폰트 크기 설정 */
+    font-size: 15px; /* 폰트 크기 설정 */
 
     border: 1px solid #ccc; /* 테두리 */
 }
