[후곤]슬라이더에 좌우이동 버튼추가

--- a/front/react/src/styles/Statistics.css
+++ b/front/react/src/styles/Statistics.css
@@ -117,3 +117,10 @@
 }
   
 
+.statistics-slick-prev, .statistics-slick-next {
+    z-index: 1000;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
