--- a/front/react/src/styles/Header.css
+++ b/front/react/src/styles/Header.css
@@ -114,3 +114,11 @@
 .header-category-container .header-category-box .header-category-item:focus {
     outline: none;
 }
+
+
+.header-logo {
+    position: absolute;
+    top: 10px; /* 원하는 위치 조정 */
+    left: 10px; /* 필요하면 조정 */
+    z-index: 10; /* 다른 요소 위에 표시 */
+}
