[후곤]메인화면 홈이미지 창줄일때 침범하지않도록 수정

--- a/front/react/src/styles/Header.css
+++ b/front/react/src/styles/Header.css
@@ -26,7 +26,8 @@
     color: rgb(106, 184, 119);
     cursor: pointer;
 }
-/* ==================== icon menu ==================== */
+/* ==================== search menu ==================== */
+
 
 .header-search-container {
     height: 60px;
