--- a/front/react/src/styles/User/UserAddressF.css
+++ b/front/react/src/styles/User/UserAddressF.css
@@ -45,7 +45,7 @@
   right: 12px;
   top: 70%;
   transform: translateY(-50%);
-  color: #007bff;
+  color: #818a0f;
   font-size: 14px;
   cursor: pointer;
 }
@@ -73,7 +73,7 @@
 }
 
 .btn-submit {
-  background-color: #007bff;
+  background-color: olive;
   color: #fff;
   margin-right: 10px;
   cursor:'pointer'
