[김정민] 푸터 css 수정

--- a/front/react/src/styles/Footer.css
+++ b/front/react/src/styles/Footer.css
@@ -8,13 +8,15 @@
 }
 
 .footer_content {
+
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-
+	box-sizing: border-box;
   /*max-width: 1100px;*/
   /*margin: 0 auto;*/
 
+	
   width: 100%;
   padding-left: 25px;
 
