--- a/front/react/src/styles/MainRecent.css
+++ b/front/react/src/styles/MainRecent.css
@@ -2,8 +2,6 @@
   display: flex;
   justify-content: center; /* 가로 중앙 정렬 */
   align-items: center; /* 세로 중앙 정렬 */
-  width:100%;
-  
 }
 
 .recent-product-title {
@@ -12,17 +10,32 @@
   text-align: center;
 }
 
-.recent-product-grid {
+.recent-product-grid2 {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  /* grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); */
+  /* grid-template-columns: repeat(auto-fill, 1fr); */
   grid-template-rows: auto; /* 행의 크기는 자동 조정 */
   gap: 20px;
   padding-left : 20px;
   padding-right : 20px;
 }
 
+.recent-product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  max-width: 78%;
+  margin: 0 auto;
+  box-sizing: border-box;
+  justify-items: center;
+}
+
 
 .recent-product-card {
+  width: 100%;           /* 그리드 셀에 맞게 유동적으로 */
+  max-width: 200px;      /* 최대 카드 너비 제한 */
   background: #fff;
   border: 1px solid #ffffff;
   border-radius: 12px;
@@ -30,9 +43,9 @@
   transition: transform 0.2s ease;
   text-decoration: none;
   color: inherit;
-  width: 230px;
-  padding : 20px;
-  height: 300px;
+  width: 220px;
+  padding : 40px;
+  height: 300px; 
 }
 
 .recent-product-card:hover {
