--- a/front/react/src/styles/MainRecent.css
+++ b/front/react/src/styles/MainRecent.css
@@ -25,11 +25,13 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
   gap: 20px;
-  padding: 20px;
-  max-width: 78%;
+  width: 100%;
+  max-width: 1500px; /* 또는 원하는 최대 폭 */
   margin: 0 auto;
+  padding: 20px;
   box-sizing: border-box;
-  justify-items: center;
+  justify-content: center;
+  justify-items: center; /* 각 카드의 가운데 정렬 */
 }
 
 
