--- a/front/react/src/styles/User/UserInfo.css
+++ b/front/react/src/styles/User/UserInfo.css
@@ -40,6 +40,7 @@
   color: #555;
   width: 130px;
   flex-shrink: 0;
+  text-align: left;
 }
 
 .user-info-value {
@@ -79,7 +80,9 @@
 
 .user-info-btn:hover {
   background-color: #003e89;
+  color: white;
 }
+
 
 .user-info-btn2:hover {
   background-color: #003e89;
@@ -90,11 +93,15 @@
   margin-left: 12px;
   padding: 6px 14px;
   font-size: 14px;
-  background-color: #f0f0f0;
-  color: #333;
+  background-color: #003e89;
+  color: white;
   border: 1px solid #ccc;
   border-radius: 6px;
   cursor: pointer;
+}
+.user-info-order-btn:hover{
+  background-color: #94BFE7;
+  color:black;
 }
 
 /* 탈퇴하기 텍스트 버튼 */
@@ -109,4 +116,120 @@
   text-decoration: underline;
   cursor: pointer;
   display: block;
+}
+
+
+/* 프로필 섹션 전체 (이미지 + 등급 나란히) */
+.profile-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  gap: 80px;
+}
+
+/* 프로필 이미지 박스 */
+.profile-image-box {
+  width: 300px;
+  height: 160px;
+  border-radius: 10px;
+  background-color: #e0e0e0;
+  overflow: hidden;
+}
+
+.profile-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* 등급 표시 */
+.profile-grade {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: rgb(201, 201, 201);
+  border: 2px solid rgb(201, 201, 201); /* 테두리 추가 */
+  border-radius: 50%;         /* 원형 만들기 */
+  padding: 20px;              /* 여백으로 원처럼 보이게 */
+  width: 120px;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+}
+
+/* 프로필 등록 버튼 */
+.profile-upload-btn {
+  display: block;
+  width:100%;
+  margin: 0;
+  padding: 10px 20px;
+  background-color: #333;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+.profile-upload-btn:hover {
+  background-color: #003e89;
+}
+
+/* 프로필 삭제 버튼 */
+.profile-delete-btn {
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  background-color: transparent;
+  color: #888;
+  font-weight: 600;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-top: 0;
+}
+.profile-delete-btn:hover {
+  background-color: #f0f0f0;
+}
+
+
+
+/* 등급 전체 묶음 */
+.profile-grade-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 60px;
+}
+
+/* 등급 라벨 (작은 글씨) */
+.grade-label {
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: #555;
+  margin-bottom: 8px;
+}
+
+
+.profile-grade {
+  font-size: 5rem;
+  font-weight: bold;
+  color: gray;
+}
+
+.profile-image-with-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+/* profile-section 정렬 조정 */
+.profile-section {
+  display: flex;
+  align-items: flex-start; /* ← 위쪽 정렬 */
+  justify-content: flex-start;
+  margin-bottom: 20px;
+  gap: 40px; /* 여백 증가 */
 }
