--- a/front/react/src/styles/User/UserAddress.css
+++ b/front/react/src/styles/User/UserAddress.css
@@ -8,8 +8,8 @@
   margin-bottom: 20px;
 }
 
-.btn-add,
-.btn-default {
+.address-btn-add,
+.address-btn-default {
   padding: 8px 16px;
   background-color: #2d8cf0;
   color: white;
@@ -55,7 +55,7 @@
 }
 
 
-.default-badge {
+.address-default-badge {
   display: inline;
   background-color: #2d8cf0;
   color: black;
@@ -72,7 +72,7 @@
   gap: 6px;
 }
 
-.btn-modify {
+.address-btn-modify {
   background: none;
   border: none;
   color: #2d8cf0;
@@ -80,7 +80,7 @@
   font-size: large;
 }
 
-.btn-delete {
+.address-btn-delete {
   background: none;
   border: none;
   color: #f5222d;
